--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 
 imutils==0.5.3
 opencv-contrib-python==4.2.0.34
-torch
-torchvision
+torch==1.8.0
+torchvision==0.9.0
 onnxruntime
 ts
+onnx
 torchserve
 torch-model-archiver
