--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,6 @@
 load_models=Cuong2203.mar
 install_py_dep_per_model=true 
+model_store=/service/model-store
 models={\
   "Cuong2203": {\
     "1.0": {\
