--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,11 @@
+inference_address=http://0.0.0.0:8080
+management_address=http://0.0.0.0:8081
+metrics_address=http://0.0.0.0:8082
 load_models=Cuong2203.mar
-install_py_dep_per_model=true 
-model_store=/service/model-store
+install_py_dep_per_model=true
+model_store=model-store
+max_request_size=26214400
+max_response_size=26214400
 models={\
   "Cuong2203": {\
     "1.0": {\
