--- a/config.properties
+++ b/config.properties
@@ -1,16 +1,27 @@
 inference_address=http://0.0.0.0:8080
 management_address=http://0.0.0.0:8081
 metrics_address=http://0.0.0.0:8082
-load_models=Cuong2203.mar
+load_models=all
 install_py_dep_per_model=true
 model_store=model-store
 max_request_size=26214400
 max_response_size=26214400
 models={\
-  "Cuong2203": {\
+  "VehicleDetection": {\
     "1.0": {\
         "defaultVersion": true,\
-        "marName": "Cuong2203.mar",\
+        "marName": "VehicleDetection.mar",\
+        "minWorkers": 1,\
+        "maxWorkers": 8,\
+        "batchSize": 40,\
+        "maxBatchDelay": 500,\
+        "responseTimeout": 50\
+    }\
+  },\
+  "LaneDetection": {\
+    "1.0": {\
+        "defaultVersion": true,\
+        "marName": "LaneDetection.mar",\
         "minWorkers": 1,\
         "maxWorkers": 8,\
         "batchSize": 40,\
