--- a/config.properties
+++ b/config.properties
@@ -6,6 +6,8 @@ install_py_dep_per_model=true
 model_store=model-store
 max_request_size=26214400
 max_response_size=26214400
+grpc_inference_port=7070
+grpc_management_port=7071
 models={\
   "VehicleDetection": {\
     "1.0": {\
