--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 inference_address=http://0.0.0.0:8080
 management_address=http://0.0.0.0:8081
 metrics_address=http://0.0.0.0:8082
-load_models=all
+# load_models=all
 install_py_dep_per_model=true
 model_store=model-store
 max_request_size=26214400
